eventmill-derive/tests/fail_struct_unknown_identifier_as_event_source.stderr
error[E0425]: cannot find value `UNDEFINED_IDENTIFIER` in this scope
 --> $DIR/fail_struct_unknown_identifier_as_event_source.rs:4:14
  |
4 | #[event_type(UNDEFINED_IDENTIFIER)]
  |              ^^^^^^^^^^^^^^^^^^^^ not found in this scope
